# haskell-template

./: .ghci  .gitignore  .hlint.yaml  Justfile  LICENSE  Makefile  README.md  cabal.project.freeze  flake.nix  fourmolu.yaml  haskell-app.cabal  haskell-template.cabal  hie.yaml
.github/workflows/: build.yaml  ci.yaml
app/: Main.hs
src/: App.hs
test/: AppSpec.hs
