cabal-version:      3.0
name:               haskell-app
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             ivy-apps
maintainer:         iliyan@ivy-apps.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-app
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base >= 4.18 && < 5,

    hs-source-dirs:   app
    default-language: GHC2024
